# FreeRTOS

./: .gitignore  build.sh  rungdb.sh  runqemu.sh
FreeRTOS/Demo/CORTEX_M0+_RP2040/: CMakeLists.txt
FreeRTOS/Demo/CORTEX_M0+_RP2040/OnDualCore/: CMakeLists.txt  FreeRTOSConfig.h  main.c
FreeRTOS/Demo/THOMAS_A15_QEMU/: CMakeLists.txt  FreeRTOSConfig.h  config.cmake  main.c  rungdb.sh  runqemu.sh
FreeRTOS/Demo/THOMAS_A15_QEMU/bsp/: platform.c
FreeRTOS/Demo/THOMAS_A15_QEMU/bsp/common/: console2.c  console2.h  tiny_command.c  tiny_console.c  tiny_console.h
FreeRTOS/Demo/THOMAS_A15_QEMU/bsp/core/: start.S
FreeRTOS/Demo/THOMAS_A15_QEMU/bsp/ips/generic_timer/: generic_timer.h  timer.h
FreeRTOS/Demo/THOMAS_A15_QEMU/bsp/ips/gic/gicv3/: interrupt.c
FreeRTOS/Demo/THOMAS_A15_QEMU/bsp/ips/pl011/: pl011.h
FreeRTOS/Demo/THOMAS_A15_QEMU/libcstub/: malloc.c  write.c
FreeRTOS/Demo/THOMAS_A15_QEMU/portable/: port.c  portASM.S  portmacro.h
FreeRTOS/Demo/THOMAS_A15_QEMU_SMP/: CMakeLists.txt  FreeRTOSConfig.h  build.sh  main.c  main_blinky.c
FreeRTOS/Demo/THOMAS_A15_QEMU_SMP/bsp/: platform.c  platform.h
FreeRTOS/Demo/THOMAS_A15_QEMU_SMP/bsp/common/: console2.c  console2.h  tiny_command.c  tiny_command.h
FreeRTOS/Demo/THOMAS_A15_QEMU_SMP/bsp/core/: start.S
FreeRTOS/Demo/THOMAS_A15_QEMU_SMP/bsp/ips/generic_timer/: generic_timer.c  timer.c
FreeRTOS/Demo/THOMAS_A15_QEMU_SMP/bsp/ips/gic/gicv3/: interrupt.h
FreeRTOS/Demo/THOMAS_A15_QEMU_SMP/bsp/ips/hw_spinlock/: hw_spinlock.c  hw_spinlock.h
FreeRTOS/Demo/THOMAS_A15_QEMU_SMP/bsp/ips/misc/: misc.c  misc.h
FreeRTOS/Demo/THOMAS_A15_QEMU_SMP/bsp/ips/mmu/: mmu.c  mmu.h
FreeRTOS/Demo/THOMAS_A15_QEMU_SMP/bsp/ips/pl011/: pl011.c
FreeRTOS/Demo/THOMAS_A15_QEMU_SMP/bsp/ips/smp/: smp.c
FreeRTOS/Demo/THOMAS_A15_QEMU_SMP/bsp/ips/ttdevice/: thomas_test_device.c
FreeRTOS/Demo/THOMAS_A15_QEMU_SMP/portable/: port.c  portASM.S  portmacro.h
FreeRTOS/Demo/THOMAS_A15_QEMU_SMP/scripts/: thomas_a15.lds
FreeRTOS/Demo/THOMAS_M33_QEMU/: FreeRTOSConfig.h  Makefile  syscall.c
FreeRTOS/Demo/THOMAS_M33_QEMU/CMSIS/: CMSDK_CM3.h
FreeRTOS/Demo/THOMAS_M33_QEMU/init/: startup.c
FreeRTOS/Demo/THOMAS_M33_QEMU/scripts/: thomas_m33.ld
FreeRTOS/Demo/THOMAS_M3_QEMU/: Makefile  Readme.md
FreeRTOS/Demo/THOMAS_M3_QEMU/scripts/: thomas_m3.ld
FreeRTOS/Demo/THOMAS_RISCV32_QEMU/: CMakeLists.txt  FreeRTOSConfig.h  main.c  main_blinky.c
FreeRTOS/Demo/THOMAS_RISCV32_QEMU/bsp/common/: addr_map.h  common.h
FreeRTOS/Demo/THOMAS_RISCV32_QEMU/bsp/core/: start.S
FreeRTOS/Demo/THOMAS_RISCV32_QEMU/scripts/: thomas_riscv32.lds
